# bot-messengers

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  silly_tweet.sh  text_generator.py  tweeter.py  tweeter_bot.py  twitter_secrets_example.py
data/: silly_dictionary.json
examples/: secrets.toml  silly_dictionary.json
tweeter_bot/: __init__.py  bot.py  cli.py  text_gen.py
