[tool.poetry]
name = "tweeter-bot"
version = "1.0.0"
description = "Twitter bot that sends non-semantic, random sentences."
authors = ["Eli W. Hunter <elihunter173@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
twitterapi = "^2.5.10"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[tool.poetry.scripts]
tweeter-bot-tweet = "tweeter_bot.cli:tweet"
tweeter-bot-gen = "tweeter_bot.cli:generate_prose"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
